@@ -1,4 +1,8 @@
-﻿shmuel 22.10.2018 11:41:37 +0200 - build 670
+﻿shmuel 23.10.2018 10:16:54 +0200 - build 671
+
+1. LuaFAR: добавлена поддержка пропущенного файлового атрибута (no scrub data).
+
+shmuel 22.10.2018 11:41:37 +0200 - build 670
 
 1. LuaFAR: добавлена поддержка 3-х пропущенных файловых атрибутов (encrypted, not indexed, virtual).
 
